--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,63 @@
 body{
-    background-color: #00806A;
+    background-color: #faf9f6;
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 100 px;
+    max-height: 100 px;
 }
+h2{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+p{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+li{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    margin: 10px;
+}
+
+ul{
+    list-style-type: none;
+}
+
+#playgroundList{
+    display: flex;
+    flex-direction: column;
+    width: 50 px;
+    flex-wrap: wrap;
+}
+
+#display{
+    border: 2px solid black ;
+    padding-right: 35px;
+}
+
 
 #top{
     display: flex;
     flex-direction: column;
     align-items: center ;
+    width: 600px;
+   
+}
+.playground{
+    width: 400px
+}
+
+#playgroundList{
+    display: flex;
+    flex-direction: column;
+    max-width: 50 px
+}
+label{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    margin: 10px;
+}
+#button{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 #selector{
@@ -20,4 +69,9 @@ body{
 form{
     display: flex;
     flex-direction: column;
+}
+
+img{
+    max-width: 100 px;
+    max-height: 100 px;
 }
