--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 100 px;
-    max-height: 100 px;
+    
 }
 h2{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -17,6 +16,7 @@ p{
 li{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     margin: 10px;
+    list-style-type: none
 }
 
 ul{
@@ -28,11 +28,16 @@ ul{
     flex-direction: column;
     width: 50 px;
     flex-wrap: wrap;
+    text-align: center;
 }
 
 #display{
+    display: flex;
     border: 2px solid black ;
     padding-right: 35px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 
